--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "express": "^4.19.2"
   }
 }
