--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "openai-vercel",
+  "name": "openai-api-server",
   "version": "1.0.0",
+  "description": "A simple Express server to interact with OpenAI API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.19.2"
-  }
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  },
+  "author": "",
+  "license": "ISC"
 }
